--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document prueba</title>
+    <script defer src="./main.js"></script>
+    <title>Javascript</title>
 </head>
 <body>
-    <h1>Js</h1>
+    <h1>Entregable 1 - Geraldine Alas</h1>
 </body>
 </html>
