Añadido referencia vacia de favicon

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./main.js"></script>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="data:image/x-icon;,">
     <title>Servicios para Mascotas</title>
 </head>
 <body>
